grammar.js
    start: $ => choice(
      repeat1($.program_definition),
      $.copybook_definition
    ),

    // Standalone copybook files (no IDENTIFICATION DIVISION)
    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    data_division: $ => seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.working_storage_section),
      optional($.local_storage_section),
      optional($.linkage_section),
      optional($.report_section),
      optional($.screen_section),
    ),

    working_storage_section: $ => seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat(choice(
        seq($.data_description, repeat1('.')),
        seq($.level_number, optional($.entry_name), $._copy_clause,
            repeat($._data_description_clause), '.'),
        $.copy_statement,
        $.exec_statement
      ))
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.error
    ),

    redefines_clause: $ => seq(
      $._REDEFINES, $._identifier
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => /([xX](\([0-9]+\))?)+/,

    picture_9: $ => choice(
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
    ),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    occurs_clause: $ => seq(
      $._OCCURS,
      field('num', $.integer),
      field('to', optional(seq($._TO, $.integer))),
      optional($._TIMES),
      field('depending', optional(seq($._DEPENDING, optional($._ON), $.qualified_word))),
      field('key_spec', optional($.occurs_key_spec)),
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    section_header: $ => seq(
      field('name', choice($.WORD, $.integer)),
      $._SECTION,
      optional($._LITERAL),
      '.'
    ),

    paragraph_header: $ => seq(
      field('name', choice($.WORD, $.integer)),
      '.'
    ),

    period: $ => '.',

    _copy_clause: $ => prec.right(seq(
      $._COPY,
      field('book', optional(choice($.WORD, $.string))),
      field('lib_name', optional(seq(
        $._in_of,
        choice($.WORD, $.string)))
      ),
      field('supress', optional($.SUPPRESS)),
      optional($.replacing_clause),
    )),

    stop_statement: $ => choice(
      seq(
        $._STOP,
        $._RUN,
        optional(choice(
          field('returning', seq($._RETURNING, $._x)),
          field('giving', seq($._GIVING, $._x))
        ))
      ),
      seq(
        $._STOP,
        field('x', $._simple_value),
      )
    ),

    continue_statement: $ => $._CONTINUE,

    goto_statement: $ => seq(
      $._GO, optional($._TO),
      field('to', repeat($.label)),
      field('depending', optional(seq($._DEPENDING, optional($._ON), $._identifier)))
    ),

    label: $ => choice(
      $.qualified_word,
      seq($._LITERAL, optional(seq($._in_of, $._LITERAL)))
    ),


    expr: $ => prec.left(choice(
      seq($.NOT, $.expr),
      seq($.expr, choice($.AND, $.OR), $.expr),
      $._expr_bool,
      seq("(", $.expr, ")")
    )),

    _expr_bool: $ => choice(
      $._expr_is,
      $._expr_compare,
      $._expr_calc,
      $.is_class,
      $.is_not_class,
    ),

    ge: $ => choice(
      seq(optional($._IS), '>='),
      seq(optional($._IS), $._NOT, '<'),
      seq(optional($._IS), $._GREATER, optional($._THAN), optional($._OR), $._EQUAL, optional($._TO)),
      seq(optional($._IS), $._NOT_LESS, optional($._THAN)),
    ),

    _x: $ => choice(
      seq($._LENGTH, optional($._OF), choice(
        $._identifier,
        $._basic_literal,
        $.function_)
      ),
      seq($._ADDRESS, optional($._OF), choice(
        seq(
          choice($._PROGRAM, $._ENTRY),
          choice($._identifier, $._LITERAL)),
        $._identifier,
      )),
      $._literal,
      $.function_,
      $.linage_counter,
      $._identifier,
    ),

    perform_statement_call_proc: $ => seq(
      $._PERFORM,
      field('procedure', $.perform_procedure),
      field('option', optional($.perform_option)),
    ),

    perform_statement_loop: $ => seq(
      $._PERFORM,
      field('option', optional($.perform_option)),
    ),

    perform_procedure: $ => seq(
      $.label,
      optional(seq($.THRU, $.label)),
    ),

    perform_option: $ => choice(
      $.FOREVER,
      seq(field('times', $._id_or_lit_or_func), $._TIMES),
      seq(field('test', optional($.perform_test)), $._UNTIL, field('until', $.expr)),
      seq(field('test', optional($.perform_test)), $._VARYING, field('varying', sepBy($.perform_varying, $._AFTER)))
    ),

    _id_or_lit_or_func: $ => choice(
      $._identifier,
      $._LITERAL,
      $.function_
    ),

    perform_varying: $ => seq(
      $._identifier,
      $._FROM,
      field('from', $._x),
      $._BY,
      field('by', $._x),
      $._UNTIL,
      field('until', $.expr),
    ),

    _simple_value: $ => choice(
      $._identifier,
      $._basic_literal
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    string: $ => choice(
      /('[^'\n]*')+/,
      /("[^"\n]*")+/,
      $._multiline_string,
    ),

    _AFTER: $ => /[aA][fF][tT][eE][rR]/,
    _BY: $ => /[bB][yY]/,
    _CONTINUE: $ => /[cC][oO][nN][tT][iI][nN][uU][eE]/,
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DEPENDING: $ => /[dD][eE][pP][eE][nN][dD][iI][nN][gG]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _EQUAL: $ => /[eE][qQ][uU][aA][lL]/,
    _FILLER: $ => /[fF][iI][lL][lL][eE][rR]/,
    _FROM: $ => /[fF][rR][oO][mM]/,
    _GIVING: $ => /[gG][iI][vV][iI][nN][gG]/,
    _GO: $ => /[gG][oO]/,
    _GREATER: $ => /[gG][rR][eE][aA][tT][eE][rR]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _IS: $ => /[iI][sS]/,
    _NOT: $ => /[nN][oO][tT]/,
    _OCCURS: $ => /[oO][cC][cC][uU][rR][sS]/,
    _ON: $ => /[oO][nN]/,
    _OR: $ => /[oO][rR]/,
    _PERFORM: $ => /[pP][eE][rR][fF][oO][rR][mM]/,
    _PIC: $ => /[pP][iI][cC]/,
    _PICTURE: $ => /[pP][iI][cC][tT][uU][rR][eE]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _REDEFINES: $ => /[rR][eE][dD][eE][fF][iI][nN][eE][sS]/,
    _RETURNING: $ => /[rR][eE][tT][uU][rR][nN][iI][nN][gG]/,
    _RUN: $ => /[rR][uU][nN]/,
    _SECTION: $ => /[sS][eE][cC][tT][iI][oO][nN]/,
    _STOP: $ => /[sS][tT][oO][pP]/,
    _THAN: $ => /[tT][hH][aA][nN]/,
    _TIMES: $ => /[tT][iI][mM][eE][sS]/,
    _TO: $ => /[tT][oO]/,
    _UNTIL: $ => /[uU][nN][tT][iI][lL]/,
    _VARYING: $ => /[vV][aA][rR][yY][iI][nN][gG]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
    _WORKING_STORAGE: $ => /[wW][oO][rR][kK][iI][nN][gG]-[sS][tT][oO][rR][aA][gG][eE]/,
    _NOT_LESS: $ => /([nN][oO][tT][ \t]+(<|[lL][eE][sS][sS]))/,
