test/corpus/goto.txt
====================================
go
====================================
       identification division.
       program-id. a.
       procedure division.
       aa.
         go aa.
       bb.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (paragraph_header
        name: (WORD))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
go to
====================================
       identification division.
       program-id. a.
       procedure division.
       aa.
         go to aa.
       bb.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (paragraph_header
        name: (WORD))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
go to depending
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 n pic 9.
       procedure division.
         go to bb-1 bb-2 depending n.
       bb-1.
       bb-2.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_9)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD)))
        to: (label
          (qualified_word
            (WORD)))
        depending: (qualified_word
          (WORD)))
      (period)
      (paragraph_header
        name: (WORD))
      (paragraph_header
        name: (WORD)))))

====================================
go to depending on
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 n pic 9.
       procedure division.
         go to bb-1 bb-2 depending on n.
       bb-1.
       bb-2.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_9)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD)))
        to: (label
          (qualified_word
            (WORD)))
        depending: (qualified_word
          (WORD)))
      (period)
      (paragraph_header
        name: (WORD))
      (paragraph_header
        name: (WORD)))))

====================================
go string
====================================
       identification division.
       program-id. a.
       procedure division.
       aa.
         go "bb".
       bb.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (paragraph_header
        name: (WORD))
      (goto_statement
        (GO)
        to: (label
          (string)))
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
go string of string
====================================
       identification division.
       program-id. a.
       procedure division.
       aa.
         go "bb" of "cc".
       cc section.
       bb.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (paragraph_header
        name: (WORD))
      (goto_statement
        (GO)
        to: (label
          (string)
          (string)))
      (period)
      (section_header
        name: (WORD))
      (paragraph_header
        name: (WORD)))))
