test/corpus/minimal-cobol.txt
====================================
Minimal COBOL program
====================================

       identification division.
       program-id. a.
       procedure division.
       stop run.
       stop run.

---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (stop_statement
        (STOP)
        (RUN))
      (period)
      (stop_statement
        (STOP)
        (RUN))
      (period))))
