test/corpus/occurs.txt
====================================
occurs
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 lv1.
         03 lv3 occurs 3.
           05 lv5 pic x.
       procedure division.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (data_description
          (level_number)
          (entry_name))
        (data_description
          (level_number)
          (entry_name)
          (occurs_clause
            (OCCURS)
            num: (integer)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))))
    (procedure_division)))

====================================
occurs to
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 lv1.
         03 lv3 occurs 3 to 5.
           05 lv5 pic x.
       procedure division.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (data_description
          (level_number)
          (entry_name))
        (data_description
          (level_number)
          (entry_name)
          (occurs_clause
            (OCCURS)
            num: (integer)
            to: (integer)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))))
    (procedure_division)))

====================================
occurs times
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 lv1.
         03 lv3 occurs 3 times.
           05 lv5 pic x.
       procedure division.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (data_description
          (level_number)
          (entry_name))
        (data_description
          (level_number)
          (entry_name)
          (occurs_clause
            (OCCURS)
            num: (integer)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))))
    (procedure_division)))

====================================
occurs depending
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 lv1.
         03 lv3 occurs 3 depending l.
           05 lv5 pic x.
       01 l pic x.
       procedure division.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (data_description
          (level_number)
          (entry_name))
        (data_description
          (level_number)
          (entry_name)
          (occurs_clause
            (OCCURS)
            num: (integer)
            depending: (qualified_word
              (WORD))))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))))
    (procedure_division)))
