test/corpus/pic_x.txt
====================================
PIC X
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 str1 PIC X(10)xx(111).
       01 str2 PIC X(10).
       01 str2 PIC X.
       procedure division.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PIC)
            (picture_x)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION))))
